--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test && dotenv -e .env.test jest",
+    "start": "node src/server.ts",
+    "dev": "nodemon src/server.ts",
+    "test_simple": "jest --no-cache"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,18 +24,19 @@
     "@types/joi": "^17.2.3",
     "@types/node": "^16.3.3",
     "@types/supertest": "^2.0.11",
+    "cypress": "^10.8.0",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.32.0",
     "jest": "^28.0.3",
     "nodemon": "^2.0.12",
-    "prisma": "^3.13.0",
+    "prisma": "3.15.2",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@prisma/client": "^3.13.0",
+    "@prisma/client": "3.15.2",
     "@types/faker": "^6.6.9",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -37,6 +44,8 @@
     "express-async-errors": "^3.1.1",
     "faker": "^6.6.6",
     "joi": "^17.4.1",
+    "npx": "^10.2.2",
     "react-player": "^2.10.0"
-  }
+  },
+  "packageManager": "yarn@4.0.0-rc.20"
 }
